Make common work with both LWJGL 2 & 3, convert forge122 to Java 8 + LWJGL 2
1.12 jars will now work on vanilla Forge

Thanks to @mitchej123 for doing most of the legwork on the LWJGL abstraction

Co-authored-by: Jason Mitchell <mitchej@gmail.com>